@@ -1,6 +1,7 @@
 ??/??/2014 autofs-5.0.10
 ========================
 - fix mistake in assignment.
+- check for non existent negative entries in lookup_ghost().
 
 28/03/2014 autofs-5.0.9
 =======================
